--- a/index.html
+++ b/index.html
@@ -1,98 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pokedex</title>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Pokedex</title>
 
-    <!-- Normalize CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      <!-- Normalize CSS -->
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer"
+      />
 
-    <!-- Font Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
-      rel="stylesheet"
-    />
+      <!-- Font Roboto -->
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
+         rel="stylesheet"
+      />
 
-    <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css" />
-  </head>
+      <!-- Nosso CSS -->
+      <link rel="stylesheet" href="/assets/css/global.css" />
+      <link rel="stylesheet" href="/assets/css/pokedex.css" />
+   </head>
 
-  <body>
-    <section class="content">
-      <h1>Pokedex</h1>
+   <body>
+      <section class="content">
+         <h1>Pokedex</h1>
 
-      <ol class="pokemons">
-        <li class="pokemon">
-          <span class="number">#001</span>
-          <span class="name">Bulbasaur</span>
-          <div class="detail">
-            <ol class="types">
-              <li class="type">Grass</li>
-              <li class="type">Poison</li>
-            </ol>
+         <ol class="pokemons">
+            <li class="pokemon">
+               <span class="number">#001</span>
+               <span class="name">Bulbasaur</span>
 
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-              alt="Bulbasaur"
-            />
-          </div>
-        </li>
-        <li class="pokemon">
-          <span class="number"></span>
-          <span class="name">Ivysaur</span>
-          <div class="detail">
-            <ol class="types">
-              <li class="type">Grass</li>
-              <li class="type">Poison</li>
-            </ol>
-            <img
-              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
-              alt="Ivysaur"
-            />
-          </div>
-        </li>
-        <li class="pokemon">
-          Venusaur
-          <img
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
-            alt="Venusaur"
-          />
-        </li>
-        <li class="pokemon">
-          Charmander
-          <img
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
-            alt="Charmander"
-          />
-        </li>
-        <li class="pokemon">
-          Charmeleon
-          <img
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg"
-            alt="Charmeleon"
-          />
-        </li>
-        <li class="pokemon">
-          Charizard
-          <img
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
-            alt="Charizard"
-          />
-        </li>
-      </ol>
-    </section>
+               <div class="detail">
+                  <ol class="types">
+                     <li class="type">Grass</li>
+                     <li class="type">Poison</li>
+                  </ol>
 
-    <!-- Nosso JS -->
-    <script src="/assets/js/main.js"></script>
-  </body>
+                  <img
+                     src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                     alt="Bulbasaur"
+                  />
+               </div>
+            </li>
+         </ol>
+      </section>
+
+      <!-- Nosso JS -->
+      <script src="/assets/js/main.js"></script>
+   </body>
 </html>
