--- a/index.html
+++ b/index.html
@@ -38,66 +38,10 @@
          </div>
       </section>
 
-         <div class="pagination">
-            <button id="loadMoreButton" type="button">Load More</button>
-         </div>
-      </section>
-      <div class="pokemon-modal">
-         <div class="modal-header">
-            <div class="header-body">
-               <h1>Bulbasaur</h1>
-               <ul>
-                  <li>Grass</li>
-                  <li>Poison</li>
-               </ul>
-            </div>
-            <div class="header-body-number">#001</div>
-         </div>
-         <div class="photo-poke">
-            <img
-               src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-               alt=""
-            />
-         </div>
-         <div class="stats">
-            <nav class="modal-nav">
-               <span>About</span>
-               <span>Base Stats</span>
-               <span>Evolution</span>
-               <span>Moves</span>
-            </nav>
-            <div class="detalhes-pokemon">
-               <section class="detalhes-status">
-                  <div class="detalhe-status-itens">
-                     <span>Species</span>
-                     <span>Height</span>
-                     <span>Weight</span>
-                     <span>Abilities</span>
-                  </div>
-                  <div class="detalhe-status-itens">
-                     <span>seed</span>
-                     <span>2'3,6"(0,70 cm)</span>
-                     <span>15.2 lbs (6.9 kg)</span>
-                     <span>Overgrow, Chlorophyl</span>
-                  </div>
-               </section>
-               <span>Breading</span>
-               <section class="detalhes-status">
-                  <div class="detalhe-status-itens">
-                     <span>Gender</span>
-                     <span>Egg Groups</span>
-                     <span>Egg Cycle</span>
-                  </div>
-                  <div class="detalhe-status-itens">
-                     <span>M 87.5% F 12.5%</span>
-                     <span>Monster</span>
-                     <span>Grass</span>
-                  </div>
-               </section>
-            </div>
-         </div>
-      </div>
-      <div class="pokemon-modal-background"></div>
+      <!-- <div class="pagination">
+         <button id="loadMoreButton" type="button">Load More</button>
+      </div> -->
+      <section id="modal-pokemon"></section>
       <!-- Nosso JS -->
       <script src="/assets/js/pokemon-model.js"></script>
       <script src="/assets/js/poke-api.js"></script>
